Bug 1093374 - Use -moz-appearance: none on TabToolbar to preserve custom background with tab overflow and tabs outside titlebar on OSX;r=dao
UltraBlame original commit: de9c2a2f67eb6d9ccd7368723f97b35ca4706689

--- a/browser/themes/osx/devedition.css
+++ b/browser/themes/osx/devedition.css
@@ -71,8 +71,8 @@
 }
 
 
-#main-window:not([customizing]) #navigator-toolbox[inFullscreen] > #TabsToolbar:not(:-moz-lwtheme) {
-  -moz-appearance: none;
+#TabsToolbar {
+  -moz-appearance: none !important;
 }
 
 
